tests/declare_class/declare_class.exp
lib/test.js:0
Library type error:
inconsistent use of library definitions
  8:   foo(): string;
              ^^^^^^ string. This type is incompatible with
  2:   foo(): number;
              ^^^^^^ number

declare_class.js:6
  6: C.x = "";
     ^^^ assignment of property `x`
  6: C.x = "";
           ^^ string. This type is incompatible with
  2:     static x: number;
                   ^^^^^^ number

declare_class.js:7
  7: C.foo("");
     ^^^^^^^^^ call of method `foo`
  7: C.foo("");
           ^^ string. This type is incompatible with
  3:     static foo(x: number): void;
                       ^^^^^^ number

declare_class.js:10
 10: (C.name: number); // error, it's a string
      ^^^^^^ string. This type is incompatible with
 10: (C.name: number); // error, it's a string
              ^^^^^^ number

pseudo_this.js:15
 15: var s1: string = x.absM(); // NG: X doesn't implement V
                      ^^^^^^^^ call of method `absM`
  9:   absM(this: this & V): string;
                         ^ property `virtualM` of V. Property not found in
 15: var s1: string = x.absM(); // NG: X doesn't implement V
                      ^ X

pseudo_this.js:15
 15: var s1: string = x.absM(); // NG: X doesn't implement V
                      ^^^^^^^^ call of method `absM`
  9:   absM(this: this & V): string;
                         ^ property `virtualSM` of statics of V. Property not found in
 15: var s1: string = x.absM(); // NG: X doesn't implement V
                      ^ statics of X

pseudo_this.js:16
 16: var s2: string = X.absSM(); // NG: X doesn't implement V
                      ^^^^^^^^^ call of method `absSM`
 10:   static absSM(this: Class<this> & Class<V>): string;
                                              ^ property `virtualSM` of statics of V. Property not found in
  6: declare class X {
     ^ statics of X

pseudo_this.js:16
 16: var s2: string = X.absSM(); // NG: X doesn't implement V
                      ^^^^^^^^^ call of method `absSM`
 10:   static absSM(this: Class<this> & Class<V>): string;
                                              ^ property `virtualM` of V. Property not found in
 16: var s2: string = X.absSM(); // NG: X doesn't implement V
                      ^ X


Found 8 errors
